--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
     border-radius: 10px;
     line-height: 26px;
     font-size: 25px;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Patrick Hand';
 }
 .gap{
     background-color: aqua;
